<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#313FB8"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:text="@string/bunk_tracker"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textStyle="bold">
        </TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="165dp"
            android:layout_marginRight="165dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="227dp"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/menu_layer"
            android:orientation="vertical">

            <Button
                android:id="@+id/addSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:onClick="addSub"
                android:text="@string/add_subject"
                android:textColor="#000000"
                android:textStyle="bold"
                app:cornerRadius="22dp"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/recordBunk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#EF4040"
                android:text="@string/record_bunk"
                android:onClick="recBunk"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="22dp" />

            <Button
                android:id="@+id/subjectReport"
                android:text="@string/subject_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="#000000"
                android:textStyle="bold"
                app:cornerRadius="22dp"
                android:onClick="subReport"/>

            <Button
                android:id="@+id/about"
                android:text="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="#000000"
                android:textStyle="bold"
                app:cornerRadius="22dp"
                android:onClick="about"/>

            <Button
                android:id="@+id/exit"
                android:text="@string/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="#EF4040"
                android:textStyle="bold"
                app:cornerRadius="22dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>